--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://jfz88w.github.io/didactic-lamp",
+  "homepage": "https://jfz88w.github.io/didactic-lamp/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
